# scientific-physic-software

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/physics_toolkit/: linealg.py
src/utils/: utils.py
tests/: test_linalg.py
