[project]
name = "scientific-physic-software"
version = "0.1.0"
description = ""
authors = [
    {name = "francoislang",email = "langfrancoisfrederic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.13,<0.15.0)"
]

[tool.ruff]
line-length = 88
target-version="py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # E: pycodestyle, F: pyflakes, I: isort
ignore = []